--- a/pdfExpt/pdfExpt/Base.lproj/Main.storyboard
+++ b/pdfExpt/pdfExpt/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="ipad10_5" orientation="landscape">
+    <device id="ipad10_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -10,56 +10,100 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--PDF View Controller Scene-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="pdfExpt" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PDFViewController" title="PDF View Controller Scene" id="BYZ-38-t0r" customClass="PDFViewController" customModule="pdfExpt" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
+                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8MZ-nd-JaW" userLabel="Files View">
-                                <rect key="frame" x="0.0" y="20" width="240" height="814"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v7S-m8-kbJ" userLabel="PDF View" customClass="PDFView">
+                                <rect key="frame" x="0.0" y="20" width="834" height="1092"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello, my reader." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AOk-wP-L6I">
+                                        <rect key="frame" x="353" y="536" width="128.5" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="Kta-3f-h5B"/>
+                                    <constraint firstItem="AOk-wP-L6I" firstAttribute="centerX" secondItem="v7S-m8-kbJ" secondAttribute="centerX" id="AVQ-8B-1LQ"/>
+                                    <constraint firstItem="AOk-wP-L6I" firstAttribute="centerY" secondItem="v7S-m8-kbJ" secondAttribute="centerY" id="co1-mF-YWY"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v7S-m8-kbJ" userLabel="PDF View" customClass="PDFView">
-                                <rect key="frame" x="240" y="20" width="608" height="814"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cCf-Sq-O8K" userLabel="PDF Thumbnail View" customClass="PDFThumbnailView">
-                                <rect key="frame" x="848" y="20" width="264" height="814"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iJk-gP-ZyX" userLabel="Top Bar">
+                                <rect key="frame" x="0.0" y="20" width="834" height="60"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reading" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rXv-0W-MKb" userLabel="Document Name">
+                                        <rect key="frame" x="386" y="19" width="62.5" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q7F-fb-1GM">
+                                        <rect key="frame" x="744" y="15" width="70" height="30"/>
+                                        <state key="normal" title="Bookmark"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jFW-fu-9Lo">
+                                        <rect key="frame" x="20" y="15" width="68" height="30"/>
+                                        <state key="normal" title="Bookshelf"/>
+                                        <connections>
+                                            <action selector="openDocumentBrowser:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0zR-Se-Xkj"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="Q7F-fb-1GM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="iJk-gP-ZyX" secondAttribute="leading" constant="20" symbolic="YES" id="3h8-V5-6UK"/>
+                                    <constraint firstAttribute="trailing" secondItem="Q7F-fb-1GM" secondAttribute="trailing" constant="20" id="UZt-Ef-RzX"/>
+                                    <constraint firstItem="rXv-0W-MKb" firstAttribute="centerY" secondItem="iJk-gP-ZyX" secondAttribute="centerY" id="XAr-9E-uXD"/>
+                                    <constraint firstItem="rXv-0W-MKb" firstAttribute="centerX" secondItem="iJk-gP-ZyX" secondAttribute="centerX" id="eHO-x7-BRO"/>
+                                    <constraint firstItem="Q7F-fb-1GM" firstAttribute="centerY" secondItem="iJk-gP-ZyX" secondAttribute="centerY" id="hcC-gD-WFb"/>
+                                    <constraint firstItem="jFW-fu-9Lo" firstAttribute="leading" secondItem="iJk-gP-ZyX" secondAttribute="leading" constant="20" id="nJl-Yo-n8x"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="jFW-fu-9Lo" secondAttribute="trailing" constant="20" symbolic="YES" id="sn9-lH-0Gr"/>
+                                    <constraint firstItem="jFW-fu-9Lo" firstAttribute="centerY" secondItem="iJk-gP-ZyX" secondAttribute="centerY" id="xwE-Wa-arK"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="v7S-m8-kbJ" firstAttribute="leading" secondItem="8MZ-nd-JaW" secondAttribute="trailing" id="3cD-Pl-ghA"/>
-                            <constraint firstItem="v7S-m8-kbJ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="3oa-Nv-d3F"/>
-                            <constraint firstItem="v7S-m8-kbJ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ARw-44-iyd"/>
-                            <constraint firstItem="cCf-Sq-O8K" firstAttribute="leading" secondItem="v7S-m8-kbJ" secondAttribute="trailing" id="Hhu-JW-QOe"/>
-                            <constraint firstItem="8MZ-nd-JaW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="NFR-fY-Ehe"/>
-                            <constraint firstItem="cCf-Sq-O8K" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Ow0-qa-51K"/>
-                            <constraint firstItem="8MZ-nd-JaW" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="UL5-Yi-x4C"/>
-                            <constraint firstItem="cCf-Sq-O8K" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Y6S-AT-QvX"/>
-                            <constraint firstItem="cCf-Sq-O8K" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="848" id="fr3-Lw-ISQ"/>
-                            <constraint firstItem="v7S-m8-kbJ" firstAttribute="leading" secondItem="8MZ-nd-JaW" secondAttribute="trailing" id="gFd-vx-SKV"/>
-                            <constraint firstItem="cCf-Sq-O8K" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="icC-uS-nrt"/>
-                            <constraint firstItem="8MZ-nd-JaW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="kdb-WC-M1N"/>
+                            <constraint firstItem="iJk-gP-ZyX" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="1C4-lO-06f"/>
+                            <constraint firstItem="v7S-m8-kbJ" firstAttribute="top" secondItem="iJk-gP-ZyX" secondAttribute="bottom" constant="-60" id="6Yj-8A-BNg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="v7S-m8-kbJ" secondAttribute="trailing" id="91L-AB-dk6"/>
+                            <constraint firstItem="v7S-m8-kbJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9Am-uk-K7I"/>
+                            <constraint firstItem="iJk-gP-ZyX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BfH-XO-8VT"/>
+                            <constraint firstItem="v7S-m8-kbJ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="GM5-ZF-1ml"/>
+                            <constraint firstItem="iJk-gP-ZyX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="mJC-ZX-t2b"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="v7S-m8-kbJ" secondAttribute="bottom" id="rc0-Vz-c0e"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="filesView" destination="8MZ-nd-JaW" id="enr-dw-zYr"/>
+                        <outlet property="documentTitle" destination="rXv-0W-MKb" id="d9q-Ir-C2U"/>
                         <outlet property="pdfView" destination="v7S-m8-kbJ" id="PSH-BY-ZSb"/>
-                        <outlet property="thumbnailView" destination="cCf-Sq-O8K" id="MGG-Fu-Xsz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.58992805755395" y="133.81294964028777"/>
+            <point key="canvasLocation" x="137.41007194244605" y="133.81294964028777"/>
+        </scene>
+        <!--Document Browser View Controller-->
+        <scene sceneID="rQV-yB-npg">
+            <objects>
+                <viewController storyboardIdentifier="DocumentBrowserViewController" id="RBF-LV-H7I" customClass="DocumentBrowserViewController" customModule="pdfExpt" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Cma-hh-LrE">
+                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="2vB-2l-2rK"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V9c-kT-Yko" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="138" y="851"/>
         </scene>
     </scenes>
 </document>
